# multi-agent-credit-analysis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_FINAL_REPORT.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
data/sample_documents/: README.md
docs/: api_examples.md  como_funciona.md  deployment_guide.md
notebooks/: demo_credit_analysis.ipynb  technical_deep_dive.ipynb
scripts/: deploy.sh  run_tests.sh  setup.sh
src/: config.py  main.py
src/agents/: base_agent.py  data_gatherer.py  document_analyst.py  quality_assurance.py  risk_analyst.py
src/graph/: credit_analysis_graph.py
src/models/: schemas.py
src/tools/: cnpj_api.py  document_processor.py  vector_store.py  web_search.py
tests/: conftest.py  test_agents.py  test_api.py  test_tools.py
